# gta5-autopilot

./: .gitignore  GTA.sln  PLAN.md
.claude/: settings.local.json
bridge/proto/: telemetry.proto
nlu_sidecar/: chat_server.py  config.py  gta_gazetteer.json  nlu_engine.py  tcp_client.py
phase1_rule_based/: phase1_status.md
phase1_rule_based/GTA5AutoPilot/: Configuration.cs  DecisionEngine.cs  DrivingCommand.cs  EntryPoint.cs  GTA5AutoPilot.csproj  SensorData.cs  WaypointManager.cs
phase1_rule_based/GTA5AutoPilot/Debug/: DebugCommands.cs  DebugOverlay.cs
phase1_rule_based/GTA5AutoPilot/Modules/: CollisionPredictor.cs  EntityDetector.cs  IntersectionHandler.cs  LaneKeeper.cs  PathNavigator.cs  SpeedGovernor.cs  TrafficLightDetector.cs  VehicleController.cs
phase1_rule_based/GTA5AutoPilot/NativeWrappers/: PathfindingUtils.cs  TrafficLightUtils.cs  VehicleControlUtils.cs
phase1_rule_based/GTA5AutoPilot/Networking/: TcpCommandServer.cs
phase2_vision/: pyproject.toml
phase2_vision/gta_driving/: __init__.py  config.py
phase2_vision/gta_driving/control/: safety_filter.py  vehicle_commander.py
phase2_vision/gta_driving/data_pipeline/: recorder.py
phase2_vision/gta_driving/perception/: lane_detector.py  object_detector.py  traffic_light_classifier.py  vision_bridge.py
phase2_vision/gta_driving/policy/: dataset.py  inference_engine.py  models.py  trainer.py
phase2_vision/scripts/: collect_dataset.py  evaluate_perception.py  finetune_detector.py  record_session.py  run_inference.py  train_policy.py
(+2 files in other folders)
