[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gta_driving"
version = "0.1.0"
description = "Phase 2: Vision-based autonomous driving for GTA V"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "torch>=2.0",
    "torchvision>=0.15",
    "h5py>=3.9",
    "protobuf>=4.21",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tensorboard>=2.13",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.0.280",
]

[tool.setuptools.packages.find]
include = ["gta_driving*"]

[tool.ruff]
line-length = 100
